--- a/mart.html
+++ b/mart.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header>
-      <nav class="navbar">
-        <a href="index.html" class="logo">FarmNexus</a>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="predictor.html">Predictor</a></li>
-            <li><a href="mart.html">Farm Mart</a></li>
-            <li><a href="recom.html">Crop Recommendations</a></li>
-            <li><a href="bot.html">AI Chatbot</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar">
+            <a href="index.html" class="logo">FarmNexus</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="predictor.html">Predictor</a></li>
+                <li><a href="mart.html">Farm Mart</a></li>
+                <li><a href="recom.html">Crop Recommendations</a></li>
+                <li><a href="https://ayushmitra-bot.streamlit.app/" target="_blank" rel="noopener noreferrer">AI Chatbot</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div id="cartButton" class="cart-button">
