--- a/signup.html
+++ b/signup.html
@@ -10,10 +10,16 @@
 
     <!-- Header Section -->
     <header>
-        <div class="logo">
-            <h1>FarmNexus</h1>
-            <p>A Digital Platform for Streamlined Agricultural Marketing</p>
-        </div>
+        <nav class="navbar">
+            <a href="index.html" class="logo">FarmNexus</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="predictor.html">Predictor</a></li>
+                <li><a href="mart.html">Farm Mart</a></li>
+                <li><a href="recom.html">Crop Recommendations</a></li>
+                <li><a href="https://ayushmitra-bot.streamlit.app/" target="_blank" rel="noopener noreferrer">AI Chatbot</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Signup Form Section -->
