--- a/recom.html
+++ b/recom.html
@@ -17,7 +17,7 @@
                 <li><a href="predictor.html">Predictor</a></li>
                 <li><a href="mart.html">Farm Mart</a></li>
                 <li><a href="recom.html">Crop Recommendations</a></li>
-                <li><a href="bot.html">AI Chatbot</a></li>
+                <li><a href="https://ayushmitra-bot.streamlit.app/" target="_blank" rel="noopener noreferrer">AI Chatbot</a></li>
             </ul>
         </nav>
         <h1>FarmNexus - Agricultural Platform</h1>
