--- a/mart.html
+++ b/mart.html
@@ -19,6 +19,8 @@
                 <li><a href="recom.html">Crop Recommendations</a></li>
                 <li><a href="https://ayushmitra-bot.streamlit.app/" target="_blank" rel="noopener noreferrer">AI Chatbot</a></li>
             </ul>
+            <!-- Language Selector -->
+            <div id="google_translate_element" class="language-selector"></div>
         </nav>
     </header>
 
@@ -96,5 +98,16 @@
     </footer>
 
     <script src="mart.js"></script>
+    <!-- Google Translate Script -->
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement(
+                {pageLanguage: 'en'},
+                'google_translate_element'
+            );
+
+        }
+    </script>
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
