--- a/mart.html
+++ b/mart.html
@@ -89,6 +89,48 @@
                   <p>Price: ₹600 per day</p>
                   <button class="button" onclick="addToCart('Fertilizer Spreader', 600)">Add to Cart</button>
               </div>
+              <div class="equipment-item">
+                <img src="https://www.deere.co.in/assets/images/region-1/products/tractors/john-deere-e-series-cab.jpg" alt="Tractor" />
+                <h4>Tractor</h4>
+                <p>Price: ₹500 per day</p>
+                <button class="button" onclick="addToCart('Tractor', 500)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://www.deere.co.in/assets/images/region-1/products/tractors/john-deere-e-series-cab.jpg" alt="Tractor" />
+                <h4>Tractor</h4>
+                <p>Price: ₹500 per day</p>
+                <button class="button" onclick="addToCart('Tractor', 500)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://www.deere.co.in/assets/images/region-1/products/tractors/john-deere-e-series-cab.jpg" alt="Tractor" />
+                <h4>Tractor</h4>
+                <p>Price: ₹500 per day</p>
+                <button class="button" onclick="addToCart('Tractor', 500)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://www.deere.co.in/assets/images/region-1/products/tractors/john-deere-e-series-cab.jpg" alt="Tractor" />
+                <h4>Tractor</h4>
+                <p>Price: ₹500 per day</p>
+                <button class="button" onclick="addToCart('Tractor', 500)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://www.deere.co.in/assets/images/region-1/products/tractors/john-deere-e-series-cab.jpg" alt="Tractor" />
+                <h4>Tractor</h4>
+                <p>Price: ₹500 per day</p>
+                <button class="button" onclick="addToCart('Tractor', 500)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://sims.sit.ac.in/parents/images/comprofiler/Thumbnail_User_Original_8843_0_20231006115330.jpg" alt="Bucket Boss" />
+                <h4>Bucket Boss</h4>
+                <p>Price: ₹18 per day</p>
+                <button class="button" onclick="addToCart('Bucket Boss', 18)">Add to Cart</button>
+            </div>
+            <div class="equipment-item">
+                <img src="https://lh5.googleusercontent.com/5TskCeFlCC7egDi_K0qIKjQjaBroG4aOibntc0ZPFTAnxg8cD0D_RKcuw2e-S_9X5LGz0w=w1280" alt="Dove Raja" />
+                <h4>Dove Raja</h4>
+                <p>Price: ₹13 per day</p>
+                <button class="button" onclick="addToCart('Dove Raja', 13)">Add to Cart</button>
+            </div>
           </div> 
         </section>
     </main>
