updated Farm mart

--- a/mart.html
+++ b/mart.html
@@ -126,7 +126,7 @@
                 <button class="button" onclick="addToCart('Bucket Boss', 18)">Add to Cart</button>
             </div>
             <div class="equipment-item">
-                <img src="https://lh5.googleusercontent.com/5TskCeFlCC7egDi_K0qIKjQjaBroG4aOibntc0ZPFTAnxg8cD0D_RKcuw2e-S_9X5LGz0w=w1280" alt="Dove Raja" />
+                <img src="https://i.ibb.co/6D1XfzK/Embedded-Image.jpg" alt="Dove Raja" />
                 <h4>Dove Raja</h4>
                 <p>Price: ₹13 per day</p>
                 <button class="button" onclick="addToCart('Dove Raja', 13)">Add to Cart</button>
