--- a/public/recom.html
+++ b/public/recom.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <a href="index.html" class="logo">FarmNexus</a>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="welcome.html">Home</a></li>
                 <li><a href="predictor.html">Predictor</a></li>
                 <li><a href="mart.html">Farm Mart</a></li>
                 <li><a href="recom.html">Crop Recommendations</a></li>
