--- a/public/welcome.html
+++ b/public/welcome.html
@@ -7,45 +7,51 @@
     <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to FarmNexus</h1>
-        <div id="error-message" class="error"></div>
+    <div class="main-container">
+        <div class="form-section">
+            <div class="right-section">
+                <div class="container">
+                    <h1>Welcome to FarmNexus</h1>
+                    <div id="error-message" class="error"></div>
+                    <div class="tabs">
+                        <button id="signup-tab" class="active">Sign Up</button>
+                        <button id="signin-tab">Sign In</button>
+                    </div>
 
-        <div class="tabs">
-            <button id="signup-tab" class="active">Sign Up</button>
-            <button id="signin-tab">Sign In</button>
+                    <!-- Sign Up Form -->
+                    <form id="signup-form" class="form active" action="/signup" method="POST">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+
+                        <label for="state">State:</label>
+                        <input type="text" id="state" name="state" required>
+
+                        <label for="district">District:</label>
+                        <input type="text" id="district" name="district" required>
+
+                        <label for="age">Age:</label>
+                        <input type="number" id="age" name="age" required>
+
+                        <label for="role">Role:</label>
+                        <select id="role" name="role" required>
+                            <option value="buyer">Buyer</option>
+                            <option value="seller">Seller</option>
+                        </select>
+
+                        <button type="submit">Sign Up</button>
+                    </form>
+
+                    <!-- Sign In Form -->
+                    <form id="signin-form" class="form" action="/signin" method="POST">
+                        <label for="signin-name">Name:</label>
+                        <input type="text" id="signin-name" name="name" required>
+
+                        <button type="submit">Sign In</button>
+                    </form>
+                </div>
+            </div>
         </div>
 
-        <!-- Sign Up Form -->
-        <form id="signup-form" class="form active" action="/signup" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="state">State:</label>
-            <input type="text" id="state" name="state" required>
-
-            <label for="district">District:</label>
-            <input type="text" id="district" name="district" required>
-
-            <label for="age">Age:</label>
-            <input type="number" id="age" name="age" required>
-
-            <label for="role">Role:</label>
-            <select id="role" name="role" required>
-                <option value="buyer">Buyer</option>
-                <option value="seller">Seller</option>
-            </select>
-
-            <button type="submit">Sign Up</button>
-        </form>
-
-        <!-- Sign In Form -->
-        <form id="signin-form" class="form" action="/signin" method="POST">
-            <label for="signin-name">Name:</label>
-            <input type="text" id="signin-name" name="name" required>
-
-            <button type="submit">Sign In</button>
-        </form>
     </div>
 
     <script>
